--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "keystone": "4.0.0-beta.5",
     "lodash": "^4.13.1",
     "mongoose": "^5.10.8",
-    "pug": "2.0.0-beta11"
+    "nodemailer": "^6.4.14",
+    "pug": "2.0.0-beta11",
+    "sendgrid": "^5.2.3"
   },
   "devDependencies": {
     "eslint": "3.15.0",
