--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@keystonejs/fields": "^19.0.0",
     "async": "2.1.4",
     "cors": "^2.8.5",
-    "dotenv": "4.0.0",
+    "dotenv": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "keystone": "4.0.0-beta.5",
     "lodash": "^4.13.1",
