--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@keystonejs/fields": "^19.0.0",
+    "@sendgrid/mail": "^7.3.0",
     "async": "2.1.4",
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
