--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^8.5.1",
     "keystone": "4.0.0-beta.5",
     "lodash": "^4.13.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.8",
     "nodemailer": "^6.4.14",
     "pug": "2.0.0-beta11",
