--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@sendgrid/mail": "^7.3.0",
     "async": "2.1.4",
     "bcrypt": "^5.0.0",
+    "cloudinary": "^1.23.0",
     "cors": "^2.8.5",
     "dotenv": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -14,6 +15,7 @@
     "lodash": "^4.13.1",
     "moment": "^2.29.1",
     "mongoose": "^5.10.9",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.14",
     "pug": "2.0.0-beta11",
     "sendgrid": "^5.2.3"
