--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^5.0.0",
     "cloudinary": "^1.23.0",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "dotenv": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "keystone": "4.0.0-beta.5",
@@ -16,6 +17,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.10.9",
     "multer": "^1.4.2",
+    "node-cron": "^2.0.3",
     "nodemailer": "^6.4.14",
     "pug": "2.0.0-beta11",
     "sendgrid": "^5.2.3"
