--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "dotenv": "^4.0.0",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "keystone": "4.0.0-beta.5",
     "lodash": "^4.13.1",
