--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "node-cron": "^2.0.3",
     "nodemailer": "^6.4.14",
     "pug": "2.0.0-beta11",
-    "sendgrid": "^5.2.3"
+    "sendgrid": "^5.2.3",
+    "twilio": "^3.60.0"
   },
   "devDependencies": {
     "eslint": "3.15.0",
